--- a/.github/workflows/2_get_data_next_game_day 2026.yml
+++ b/.github/workflows/2_get_data_next_game_day 2026.yml
@@ -73,3 +73,11 @@ jobs:
             git commit -m "$commit_msg"
             git push origin 2026
           fi
+
+      # 8️⃣ Trigger the prediction workflow (🏀 Build Predictions & Betting Lines)
+      - name: Trigger prediction workflow
+        if: ${{ success() }}
+        uses: peter-evans/workflow-dispatch@v3
+        with:
+          workflow: "🏀 Build Predictions & Betting Lines"
+          ref: 2026
