Rename workflow for clarity

--- a/.github/workflows/1_get_data_previous_game_day 2026.yml
+++ b/.github/workflows/1_get_data_previous_game_day 2026.yml
@@ -1,4 +1,4 @@
-name: "🏀 Collect and Prepare NBA Game Data (Previous Game Day)"
+name: "🏀 1. Collect and Prepare NBA Game Data (Previous Game Day)"
 
 on:
   workflow_dispatch:
