Rename workflow to '2. Collect Next Game Data'

--- a/.github/workflows/2_get_data_next_game_day 2026.yml
+++ b/.github/workflows/2_get_data_next_game_day 2026.yml
@@ -1,4 +1,4 @@
-name: "🏀 Collect Next Game Data"
+name: "🏀 2. Collect Next Game Data"
 
 on:
   # You can still fire this manually from the Actions tab
