Rename workflow to '3. Build Predictions & Betting Lines'

--- a/.github/workflows/3_predict_games_hybrid_2026.yml
+++ b/.github/workflows/3_predict_games_hybrid_2026.yml
@@ -1,4 +1,4 @@
-name: "🏀 Build Predictions & Betting Lines (Today)"
+name: "🏀 3. Build Predictions & Betting Lines (Today)"
 
 on:
   # allow manual run in Actions tab
