Fix workflow name in data collection YAML
1.

--- a/.github/workflows/2_get_data_next_game_day 2026.yml
+++ b/.github/workflows/2_get_data_next_game_day 2026.yml
@@ -6,7 +6,7 @@ on:
 
   # This makes it auto-run after workflow 1 completes
   workflow_run:
-    workflows: ["🏀 Collect and Prepare NBA Game Data (Previous Game Day)"]
+    workflows: ["🏀 1. Collect and Prepare NBA Game Data (Previous Game Day)"]
     types: [completed]
 
 jobs:
