--- a/.github/workflows/4_calculate_betting_statistics_2026.yml
+++ b/.github/workflows/4_calculate_betting_statistics_2026.yml
@@ -6,7 +6,7 @@ on:
 
   # Auto-run after workflow 3 completes successfully
   workflow_run:
-    workflows: ["🏀 Collect Next Game Data"]
+    workflows: ["🏀 3. Build Predictions & Betting Lines (Today)"]
     types: [completed]
 
 jobs:
